# simple-ai-agent

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mcp-config.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  slack_manifest.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: alert_rules.yml  alertmanager.yml  prometheus.yml
config/grafana/provisioning/dashboards/: dashboard.yml
config/grafana/provisioning/datasources/: prometheus.yml
docs/: IMPLEMENTATION_SUMMARY.md  aiops.md  architecture.md  component-diagram.md  database-architecture.md  hld.d2  kubernetes-integration.md  mcp-improvements.md  mcp-integration.md  mcp-registry.md  sequence-diagrams.md  slack-setup.md
helm/simple-ai-agent/: Chart.yaml  values.yaml
helm/simple-ai-agent/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/simple-ai-agent/templates/tests/: test-connection.yaml
scripts/: README.md  init_db.py  mcp_server.py  resend_approval.py  start.sh  start_production.sh  start_server.sh  stop_server.sh  trigger_aiops_approval.py
src/: config.py  main.py
src/ai/: __init__.py  context_builder.py  github_models.py  model_selector.py  prompt_manager.py
src/aiops/: __init__.py  log_analyzer.py  playbooks.py  rca_engine.py  rule_engine.py
src/api/: __init__.py  health.py  middleware.py  webhooks.py
src/channels/: __init__.py  base.py  discord_adapter.py  router.py  slack_adapter.py  telegram_adapter.py
src/database/: __init__.py  models.py  postgres.py  redis.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_initial.py  002_aiops_tables.py
src/database/repositories/: __init__.py  channel_config_repository.py  conversation_repository.py  message_repository.py  user_repository.py
src/k8s/: __init__.py  client.py
src/mcp/: __init__.py  base_transport.py  kubernetes_server.py  mcp_manager.py  sse_transport.py  stdio_transport.py
src/monitoring/: __init__.py  grafana.py  metrics.py  prometheus.py  tracing.py  watchloop.py
src/services/: __init__.py  approval_manager.py  kubernetes_handler.py  mcp_client.py  mcp_registry.py  message_handler.py  session_manager.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  test_aiops_e2e.py  test_production_readiness.py
tests/unit/: test_approval_manager.py  test_channels_router.py  test_log_analyzer.py  test_middleware.py  test_prompt_manager.py  test_rule_engine.py  test_tracing.py  test_watchloop.py
